Poster alignment bug fix

--- a/stylesheets/sass/main.scss
+++ b/stylesheets/sass/main.scss
@@ -169,7 +169,7 @@ input[type="search"]{
             width: 92px;
             height: 138px;
             background-color: $dark-blue;
-            display: inline-block;
+            display: block;
         }
     }
 }
